# E2fNet

./: .gitignore  LICENSE  README.md  data_cfg.py  eeg2fmri_datasets.py  inference.ipynb  losses.py  models.py  process_data.py  pyproject.toml  run_train.sh  train_E2fGAN.py  train_E2fNet.py  utils.py
docs/: datasets_howto.md
