[project]
name = "e2fnet"
version = "0.1.0"
description = "EEG-to-fMRI synthesis"
authors = [
    {name = "Quan Huu Cap, Kristofer Roos"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers (>=0.32.1,<0.33.0)",
    "accelerate (>=1.2.1,<1.3.0)",
    "torchmetrics (>=1.4.0.post0,<1.5.0)",
    "h5py (>=3.12.1,<3.13.0)",
    "matplotlib (>=3.9.1,<3.10.0)",
    "rich (>=13.9.4,<14.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "nilearn (>=0.11.1,<0.12.0)",
    "mne (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
